--- a/src/app/presentation/admin/layout/layout.component.html
+++ b/src/app/presentation/admin/layout/layout.component.html
@@ -1,15 +1,8 @@
 <p-sidebar class="layout-sidebar" [(visible)]="display">
 
-    <div>
-        <ul class="layout-menu">
-            <li *ngFor="let menu of items" class="layout-root-menuitem" [routerLink]="menu.url">
-                <a>
-                    <span class="layout-menuitem-root-text">{{menu.label}}</span>
-                    <i class="pi pi-fw pi-angle-down layout-submenu-toggler"></i>
-                    <span class="p-ink"></span>
-                </a>
-            </li>
-        </ul>
+    <!--PANEL MENU-->
+    <div class="layout-menu">
+        <p-panelMenu [model]="panelMenu"></p-panelMenu>
     </div>
 
 </p-sidebar>
@@ -19,9 +12,9 @@
         <button pButton pRipple icon="pi pi-bars" class="p-button-rounded p-button-text" (click)="display = true">
         </button>
         <p-breadcrumb [model]="breadcrumbItems"></p-breadcrumb>
-        <!--CABECERA-->
+        <!--MENU TAB-->
         <nav class="grid">
-            <p-tabMenu [model]="menu" class="col"></p-tabMenu>
+            <p-tabMenu [model]="tabMenu" class="col" [activeItem]="tabMenu[itemMenuIndex]"></p-tabMenu>
             <span class="p-input-icon-left">
                 <i class="pi pi-search"></i>
                 <input type="text" pInputText placeholder="SEARCH" class="border-none md:h-full" />
