--- a/src/app/presentation/admin/layout/layout.component.scss
+++ b/src/app/presentation/admin/layout/layout.component.scss
@@ -2,4 +2,13 @@
     .nav-header {
         margin-right: 100px !important;
     }
+
+    .p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-link .p-menuitem-text {
+        padding-left: 30px;
+        color: var(--primary-color);
+    }
+
+    .p-panelmenu .p-panelmenu-panel {
+        box-shadow: 0 -1px 0px 0px rgba(0, 0, 0, 0.2), 0 0px 0px 0 rgba(0, 0, 0, 0.14), 0 0px 1px 0 rgba(0, 0, 0, 0.12) !important;
+    }
 }
