--- a/src/app/presentation/admin/expo/manage-expo/courier-guide/components/general-data/general-data.component.html
+++ b/src/app/presentation/admin/expo/manage-expo/courier-guide/components/general-data/general-data.component.html
@@ -19,64 +19,96 @@
 
             <!--PRODUCTO-->
             <div class="col-12 md:col-3 flex">
-                <span class="col text-700">Producto</span>
-                <p-dropdown class="col" [options]="productList" placeholder="Selecciona un producto" optionLabel="name"
-                    [showClear]="true"></p-dropdown>
+                <span class="col-2 md:col text-700">Producto</span>
+                <p-dropdown 
+                class="col" 
+                [options]="productList" 
+                placeholder="Selecciona un producto" 
+                optionLabel="name"
+                [showClear]="true"
+                >
+                </p-dropdown>
             </div>
 
             <!--GUÍA NRO-->
             <div class="col-12 md:col-2 flex">
-                <span class="col text-700">Guía Nro</span>
-                <input class="col" type="text" pInputText placeholder="Codigo">
+                <span class="col-2 md:col-4 text-700">Guía Nro</span>
+                <input 
+                class="col md:col" 
+                type="text" 
+                pInputText 
+                placeholder="Codigo"
+                >
             </div>
 
             <!--ESTACIÓN-->
             <div class="col-12 md:col-3 flex">
-                <span class="col text-700">Estación</span>
-                <input class="col" type="text" pInputText placeholder="Codigo + Descripcion">
+                <span class="col-2 md:col-4 text-700">Estación</span>
+                <input 
+                class="col" 
+                type="text" 
+                pInputText 
+                placeholder="Codigo + Descripcion"
+                >
             </div>
 
             <!--F. REGISTRO-->
-            <div class="col-12 md:col flex">
-                <span class="col-6 text-700 md:pr-2">F. Registro</span>
+            <div class="col-12 md:col-2 flex">
+                <span class="col-6 text-700">F. Registro</span>
                 <span class="col text-500">{{ today | date: 'dd/MM/yyyy'}}</span>
             </div>
 
             <!--F. GUÍA-->
-            <div class="col-12 md:col-2 flex">
-                <span class="col-3 text-700">F. Guía</span>
-                <p-calendar placeholder="DD/MM/AAAA" dateFormat="dd/mm/yy" appendTo="body"></p-calendar>
+            <div class="col-8 md:col-2 flex">
+                <span class="col-3 md:col-3 text-700">F. Guía</span>
+                <p-calendar 
+                placeholder="DD/MM/AAAA" 
+                dateFormat="dd/mm/yy" 
+                appendTo="body"
+                >
+                </p-calendar>
             </div>
 
             <!--ORIGEN-->
-            <div class="col-12 md:col-1 flex">
+            <div class="col-4 md:col-1 flex">
                 <span class="col text-700">Origen</span>
                 <span class="col text-500">PE/LIM</span>
             </div>
 
             <!--DESTINO-->
-            <div class="col-12 md:col flex relative position-input">
-                <span class="col text-700">Destino</span>
+            <div class="col-12 md:col-2 flex relative position-input">
+                <span class="col-2 md:col text-700">Destino</span>
                 <input class="col" type="text" pInputText placeholder="Codigo">
-                <p-radioButton class="pl-1" name="groupname" value="val1"></p-radioButton>
+                <p-radioButton 
+                class="pl-1" 
+                name="groupname" 
+                value="val1"
+                >
+                </p-radioButton>
             </div>
 
             <!--MANIFIESTO-->
             <div class="col-12 md:col-2 flex">
-                <span class="col text-700 relative position-manifiesto">Manifiesto</span>
+                <span class="col-2 md:col-4 text-700 relative position-manifiesto">Manifiesto</span>
                 <input class="col" type="text" pInputText placeholder="Codigo + Descripcion">
             </div>
 
             <!--RUTA-->
-            <div class="col-12 md:col flex">
-                <span class="col text-700">Ruta</span>
-                <input  class="col" type="text" pInputText placeholder="Codigo">
+            <div class="col-6 md:col-1 flex">
+                <span class="col-4 md:col-5 text-700">Ruta</span>
+                <input class="col" type="text" pInputText placeholder="Codigo">
             </div>
 
             <!--F. RUTA-->
-            <div class="col-12 md:col flex">
-                <span class="col text-700">F. Ruta</span>
-                <p-calendar placeholder="DD/MM/AAAA" appendTo="body" dateFormat="dd/mm/yy"></p-calendar>
+            <div class="col-6 md:col-2 flex">
+                <span class="col-2 md:col-5 text-700">F. Ruta</span>
+                <p-calendar 
+                class="col" 
+                placeholder="DD/MM/AAAA" 
+                appendTo="body" 
+                dateFormat="dd/mm/yy"
+                >
+                </p-calendar>
             </div>
         </div>
     </form>
