ajustes a datos generales

--- a/src/app/presentation/admin/expo/manage-expo/courier-guide/components/recipient-data/recipient-data.component.html
+++ b/src/app/presentation/admin/expo/manage-expo/courier-guide/components/recipient-data/recipient-data.component.html
@@ -1,1 +1,5 @@
-<p>recipient-data works!</p>
+<p-card>
+    <div class="text-center col-12">
+        <span class="font-light text-primary text-center">DATOS DESTINATARIO</span>
+    </div>
+</p-card>
