--- a/src/app/presentation/admin/expo/manage-expo/courier-guide/courier-guide.component.html
+++ b/src/app/presentation/admin/expo/manage-expo/courier-guide/courier-guide.component.html
@@ -3,4 +3,14 @@
     <div class="col-12 md:col-12 md:mt-4">
         <app-general-data></app-general-data>
     </div>
+
+    <!--DATOS REMITENTE-->
+    <div class="col-12 md:col-6 md:mt-4">
+        <app-sender-data></app-sender-data>
+    </div>
+
+    <!--DATOS DESTINATARIO-->
+    <div class="col-12 md:col-6 md:mt-4">
+        <app-recipient-data></app-recipient-data>
+    </div>
 </div>
