--- a/src/app/presentation/admin/expo/manage-expo/courier-guide/components/general-data/general-data.component.html
+++ b/src/app/presentation/admin/expo/manage-expo/courier-guide/components/general-data/general-data.component.html
@@ -3,9 +3,9 @@
         <span class="font-light text-primary text-center">DATOS GENERALES</span>
     </div>
     <form [formGroup]="generalDataForm">
-        <div class="p-fluid grid col-12 md:col-12 card-content md:m-0 md:p-0 flex align-items-center">
+        <div class="p-fluid grid col-12 md:col-12 card-content md:m-0 md:p-0 flex" >
             <!--SUCURSAL-->
-            <div class="col-12 md:col-4 flex">
+            <div class="col-12 md:col-4 flex align-items-center justify-content-center">
                 <span class="col-2 text-700">Sucursal</span>
                 <input 
                 formControlName="branch_office"
@@ -18,7 +18,7 @@
             </div>
 
             <!--PRODUCTO-->
-            <div class="col-12 md:col-3 flex">
+            <div class="col-12 md:col-3 flex align-items-center justify-content-center">
                 <span class="col-2 md:col text-700">Producto</span>
                 <p-dropdown 
                 class="col" 
@@ -31,7 +31,7 @@
             </div>
 
             <!--GUÍA NRO-->
-            <div class="col-12 md:col-2 flex">
+            <div class="col-12 md:col-2 flex align-items-center justify-content-center">
                 <span class="col-2 md:col-4 text-700">Guía Nro</span>
                 <input 
                 class="col md:col" 
@@ -42,7 +42,7 @@
             </div>
 
             <!--ESTACIÓN-->
-            <div class="col-12 md:col-3 flex">
+            <div class="col-12 md:col-3 flex align-items-center justify-content-center">
                 <span class="col-2 md:col-4 text-700">Estación</span>
                 <input 
                 class="col" 
@@ -53,13 +53,13 @@
             </div>
 
             <!--F. REGISTRO-->
-            <div class="col-12 md:col-2 flex">
+            <div class="col-12 md:col-2 flex align-items-center justify-content-center md:-mt-4">
                 <span class="col-6 text-700">F. Registro</span>
                 <span class="col text-500">{{ today | date: 'dd/MM/yyyy'}}</span>
             </div>
 
             <!--F. GUÍA-->
-            <div class="col-8 md:col-2 flex">
+            <div class="col-8 md:col-2 flex align-items-center justify-content-center md:-mt-4">
                 <span class="col-3 md:col-3 text-700">F. Guía</span>
                 <p-calendar 
                 placeholder="DD/MM/AAAA" 
@@ -70,13 +70,13 @@
             </div>
 
             <!--ORIGEN-->
-            <div class="col-4 md:col-1 flex">
+            <div class="col-4 md:col-1 flex align-items-center justify-content-center md:-mt-4">
                 <span class="col text-700">Origen</span>
                 <span class="col text-500">PE/LIM</span>
             </div>
 
             <!--DESTINO-->
-            <div class="col-12 md:col-2 flex relative position-input">
+            <div class="col-12 md:col-2 flex align-items-center justify-content-center md:-mt-4">
                 <span class="col-2 md:col text-700">Destino</span>
                 <input class="col" type="text" pInputText placeholder="Codigo">
                 <p-radioButton 
@@ -88,19 +88,19 @@
             </div>
 
             <!--MANIFIESTO-->
-            <div class="col-12 md:col-2 flex">
+            <div class="col-12 md:col-2 flex align-items-center justify-content-center md:-mt-4">
                 <span class="col-2 md:col-4 text-700 relative position-manifiesto">Manifiesto</span>
                 <input class="col" type="text" pInputText placeholder="Codigo + Descripcion">
             </div>
 
             <!--RUTA-->
-            <div class="col-6 md:col-1 flex">
+            <div class="col-6 md:col-1 flex align-items-center justify-content-center md:-mt-4">
                 <span class="col-4 md:col-5 text-700">Ruta</span>
                 <input class="col" type="text" pInputText placeholder="Codigo">
             </div>
 
             <!--F. RUTA-->
-            <div class="col-6 md:col-2 flex">
+            <div class="col-6 md:col-2 flex align-items-center justify-content-center md:-mt-4">
                 <span class="col-2 md:col-5 text-700">F. Ruta</span>
                 <p-calendar 
                 class="col" 
