--- a/src/app/presentation/admin/expo/manage-expo/courier-guide/components/sender-data/sender-data.component.html
+++ b/src/app/presentation/admin/expo/manage-expo/courier-guide/components/sender-data/sender-data.component.html
@@ -1,1 +1,78 @@
-<p>sender-data works!</p>
+<p-card>
+    <div class="text-center col-12">
+        <span class="font-light text-primary text-center">DATOS REMITENTE</span>
+    </div>
+
+    <form>
+        <div class="p-fluid grid col-12 md:col-12 card-content md:mx-6">
+            <!--CODIGO-->
+            <div class="col-12 md:col-10 flex gap-1">
+                <span class="col-2 text-700">Código</span>
+                <input class="col" type="text" pInputText placeholder="Codigo + Descripcion">
+                <button class="col-4 b-primary text-white cursor-pointer" type="text">Crear nuevo cliente</button>
+            </div>
+
+            <!--SUCURSAL-->
+            <div class="col-12 md:col-10 flex gap-1">
+                <span class="col-2 text-700">Sucursal</span>
+                <input class="col" type="text" pInputText placeholder="Codigo + Descripcion">
+                <!-- <button class="col-4 b-white-pink text-white cursor-pointer" type="text">Actualizar datos
+                    cliente</button> -->
+            </div>
+
+            <!--CONTACTO-->
+            <div class="col-12 md:col-10 flex gap-1">
+                <span class="col-2 text-700">Contacto</span>
+                <input class="col" type="text" pInputText placeholder="Nombre Telefono">
+
+                <span class="col-2 text-700">Telefono</span>
+                <input class="col" type="text" pInputText placeholder="Telefono">
+            </div>
+            <!--DOCUMENTOS-->
+            <div class="col-12 md:col-10 flex gap-1">
+                <span class="col-2 text-700">Tipo Doc</span>
+                <p-dropdown class="col pt-0 md:pt-0" placeholder="" optionLabel="name" [showClear]="true"></p-dropdown>
+
+                <span class="col text-700">Nro Doc</span>
+                <input class="col" type="text" pInputText placeholder="Codigo">
+
+                <span class="col text-700">Cuenta Fedex</span>
+                <input class="col" type="text" pInputText placeholder="Codigo">
+            </div>
+
+            <!--COMPAÑIA-->
+            <div class="col-12 md:col-10 flex gap-1">
+                <span class="col-2 text-700">N. Comercial</span>
+                <input class="col" type="text" pInputText placeholder="Nombre">
+            </div>
+
+            <!--DIRECCIÓN-->
+            <div class="col-12 md:col-10 flex gap-1">
+                <span class="col-2 text-700">Dirección</span>
+                <input class="col" type="text" pInputText placeholder="Calle + Nro + Urbanización + Distrito">
+            </div>
+
+            <!--Referecia - Codigo postal -->
+            <div class="col-12 md:col-10 flex gap-1">
+                <span class="col-2 text-700">Referencia</span>
+                <input class="col" type="text" pInputText placeholder="Referencia">
+
+                <span class="col-2 text-700">Cod. Post</span>
+                <p-dropdown optionLabel="name" [showClear]="true" placeholder="Codigo"></p-dropdown>
+            </div>
+
+            <!--Cuidad- País- Estado -->
+            <div class="col-12 md:col-10 flex gap-1">
+                <span class="col-2 text-700">Ciudad</span>
+                <input class="col" type="text" pInputText placeholder="Cuidad">
+
+                <span class="col-2 text-700">Pais</span>
+                <input class="col" type="text" pInputText placeholder="Codigo + País">
+
+                <span class="col-2 text-700">Estado</span>
+                <p-dropdown class="col pt-0 md:pt-0" placeholder="" optionLabel="name"
+                    [showClear]="true"></p-dropdown>
+            </div>
+        </div>
+    </form>
+</p-card>
