--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,6 @@ html {
 
 body {
     margin: 0;
-    background-color: #f3f3f3;
     width: 100%;
     height: 100%;
 }
@@ -243,9 +242,16 @@ p-dropdown.ng-valid.ng-clean .p-dropdown:not(.p-disabled).p-focus {
     background: #ffffff;
     padding-left: 2rem;
     padding-right: 2rem;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
     border-radius: 1rem;
+}
+
+.p-card .p-card-content {
+    padding: 0px !important;
+}
+
+.p-card .p-card-body {
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
 }
 
 .p-datatable>.p-datatable-wrapper {
