--- a/src/styles.scss
+++ b/src/styles.scss
@@ -182,14 +182,15 @@ p-dropdown.ng-valid.ng-clean .p-dropdown:not(.p-disabled).p-focus {
 
 .b-primary {
     background-color: var(--primary-color) !important;
-    border-radius: 100px;
+    border-radius: 5px !important;
+    border: none !important;
 }
 
 .b-transparent {
     background-color: transparent !important;
     color: #000000 !important;
     border: 2px solid !important;
-    border-radius: 100px;
+    border-radius: 5px !important;
 }
 
 .b-secondary {
@@ -214,26 +215,19 @@ p-dropdown.ng-valid.ng-clean .p-dropdown:not(.p-disabled).p-focus {
     border-radius: 100px;
 }
 
+.b-transparent-pink {
+    background-color: transparent !important;
+    color: var(--primary-color) !important;
+    border: 2px solid var(--primary-color) !important;
+    border-radius: 5px !important;
+}
+
+
+
 // Input Search
 
 .search {
     background-color: transparent;
-}
-
-// Simbolo moneda
-
-.currency-soles {
-    background-color: #ff565d;
-    color: white;
-    border-radius: 4px;
-    padding: 2px
-}
-
-.currency-dollar {
-    background-color: #35A700;
-    color: white;
-    border-radius: 4px;
-    padding: 2px
 }
 
 // Card
@@ -274,8 +268,8 @@ p-dropdown.ng-valid.ng-clean .p-dropdown:not(.p-disabled).p-focus {
 }
 
 .p-card-body {
-    padding-left: 2rem !important;
-    padding-right: 2rem !important;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
 }
 
 .point-active {
@@ -339,7 +333,6 @@ p-dropdown.ng-valid.ng-clean .p-dropdown:not(.p-disabled).p-focus {
 .p-dialog .p-dialog-footer button {
     padding-left: 2rem;
     padding-right: 2rem;
-    background-color: #000000 !important;
     border-radius: 100px;
 }
 
