--- a/src/app/presentation/admin/expo/manage-expo/courier-guide/components/general-data/general-data.component.html
+++ b/src/app/presentation/admin/expo/manage-expo/courier-guide/components/general-data/general-data.component.html
@@ -3,7 +3,7 @@
         <span class="font-light text-primary text-center">DATOS GENERALES</span>
     </div>
     <form [formGroup]="generalDataForm">
-        <div class="p-fluid grid col-12 md:col-12 card-content md:m-0 md:p-0 flex" >
+        <div class="p-fluid grid col-12 md:col-12 card-content flex" >
             <!--SUCURSAL-->
             <div class="col-12 md:col-4 flex align-items-center justify-content-center">
                 <span class="col-2 text-700">Sucursal</span>
