--- a/src/app/presentation/admin/expo/manage-expo/courier-guide/components/sender-data/sender-data.component.html
+++ b/src/app/presentation/admin/expo/manage-expo/courier-guide/components/sender-data/sender-data.component.html
@@ -16,7 +16,8 @@
             <div class="col-12 md:col-12 flex">
                 <span class="col-2 text-700">Sucursal</span>
                 <input class="col mr-4 md:mr-8" type="text" pInputText placeholder="Codigo + Descripcion">
-                <button class="col-3 b-transparent-pink text-white cursor-pointer" type="text">Actualizar datos cliente</button>
+                <button class="col-3 b-transparent-pink text-white cursor-pointer" type="text">Actualizar datos
+                    cliente</button>
             </div>
 
             <!--CONTACTO-->
@@ -32,15 +33,15 @@
                 </div>
             </div>
             <!--DOCUMENTOS-->
-            <div class="col-12 md:col-12 flex">
-                    <span class="col-2 text-700">Tipo Doc</span>
-                    <p-dropdown class="col type-document" placeholder="" optionLabel="name" [showClear]="true"></p-dropdown>
+            <div class="col-12 md:col-12 flex align-items-center justify-content-center">
+                <span class="col text-700">Tipo Doc</span>
+                <p-dropdown class="col type-document" placeholder="" optionLabel="name" [showClear]="true"></p-dropdown>
 
-                    <span class="col-2 text-700">Nro Doc</span>
-                    <input class="col number-document" type="text" pInputText placeholder="Codigo">
+                <span class="col text-700">Nro Doc</span>
+                <input class="col number-document" type="text" pInputText placeholder="#Documento">
 
-                    <span class="col-2 text-700">Cuenta Fedex</span>
-                    <input class="col account-fedex" type="text" pInputText placeholder="Codigo">
+                <span class="col text-700">Cuenta Fedex</span>
+                <input class="col account-fedex" type="text" pInputText placeholder="Codigo">
             </div>
 
             <!--COMPAÑIA-->
@@ -65,7 +66,7 @@
             </div>
 
             <!--Cuidad- País- Estado -->
-            <div class="col-12 md:col-12 flex">
+            <div class="col-12 md:col-12 flex align-items-center justify-content-center">
                 <span class="col-2 text-700">Ciudad</span>
                 <input class="col" type="text" pInputText placeholder="Cuidad">
 
