--- a/src/app/presentation/admin/expo/manage-expo/courier-guide/components/payment-data/payment-data.component.html
+++ b/src/app/presentation/admin/expo/manage-expo/courier-guide/components/payment-data/payment-data.component.html
@@ -1,1 +1,131 @@
-<p>payment-data works!</p>
+<p-card>
+    <div>
+    
+        <div>
+            <h3 class="text-center my-0 font-normal">
+                <span class="text-base text-red-500 text-400">DATOS PAGO</span>
+            </h3>
+        </div>
+    
+        <!-- Inputs Datos Facturacion -->
+        <div class="p-fluid grid col-12 card-content">
+
+
+            <!--Pago Transporte-->
+            <div class="col-12 md:col-8 flex">
+                <span class="col-4 text-700">Pago Transporte
+                </span>
+                <input class="col" type="text" pInputText placeholder="Código + Descripción">
+            </div>
+
+            <!--Cuenta-->
+            <div class="col-12 md:col-4 flex">
+                <span class="col-4 text-700">Cuenta
+                </span>
+                <input class="col" type="text" pInputText placeholder="Cuenta">
+            </div>
+
+            <!--Pago Impuestos-->
+            <div class="col-12 md:col-8 flex">
+                <span class="col-4 text-700">Pago Impuestos
+                </span>
+                <input class="col" type="text" pInputText placeholder="Código + Descripción">
+            </div>
+
+            <!--Cuenta-->
+            <div class="col-12 md:col-4 flex">
+                <span class="col-4 text-700">Cuenta</span>
+                <input class="col" type="text" pInputText placeholder="Cuenta">
+            </div>
+    
+            <br>
+
+            <span class="col-12 md:col-12 text-red-500  py-2">*Llenar sólo en caso de que el pagador sea un tercero</span>
+
+            <br>
+
+            <!--Referencia-->
+            <div class="col-12 md:col-11 flex">
+                <span class="col-3 text-700">Referencia
+                </span>
+                <input class="col" type="text" pInputText placeholder="Código + Descripción">
+            </div>
+
+            
+            <!--Sucursal-->
+            <div class="col-12 md:col-11 flex">
+                <span class="col-3 text-700">Sucursal
+                </span>
+                <input class="col" type="text" pInputText placeholder="Código + Descripción">
+            </div>
+
+            <!--Flete-->
+            <div class="col-12 md:col-4 flex">
+                <span class="col-4 text-700">Flete
+                </span>
+                <input class="col" type="text" pInputText placeholder="[$ Monto]">
+            </div>
+
+            <!--Dscto-->
+            <div class="col-12 md:col-4 flex">
+                <span class="col-4 text-700">Dscto
+                </span>
+                <input class="col" type="text" pInputText placeholder="[$ Monto]">
+            </div>
+
+            
+            <!--FAU-->
+            <div class="col-12 md:col-4 flex">
+                <span class="col-4 text-700">FAU
+                </span>
+                <input class="col" type="text" pInputText placeholder="[$ Monto]">
+            </div>
+
+            <!--Fuel-->
+            <div class="col-12 md:col-4 flex">
+                <span class="col-4 text-700">Fuel
+                </span>
+                <input class="col" type="text" pInputText placeholder="[$ Monto]">
+            </div>
+
+            <!--Otros-->
+            <div class="col-12 md:col-4 flex">
+                <span class="col-4 text-700">Otros
+                </span>
+                <input class="col" type="text" pInputText placeholder="[$ Monto]">
+            </div>
+
+            <!--L.Resp.-->
+            <div class="col-12 md:col-4 flex">
+                <span class="col-4 text-700">L.Resp.
+                </span>
+                <input class="col" type="text" pInputText placeholder="[$ Monto]">
+            </div>
+
+            <!--IGV-->
+            <div class="col-12 md:col-4 flex">
+                <span class="col-4 text-700">IGV
+                </span>
+                <input class="col" type="text" pInputText placeholder="[$ Monto]">
+            </div>
+
+            <!--Importe TOTAL-->
+            <div class="col-12 md:col-7 flex">
+                <span class="col-3 text-700">Importe TOTAL
+                </span>
+                <input class="col" type="text" pInputText placeholder="[$ Monto]">
+            </div>
+
+            <div class="col-12 md:col-1 pt-0">
+                <button
+                    pButton
+                    class="p-button-rounded p-button-text text-500"
+                    pTooltip="Registrar"
+                ><img class="h-2rem" src="../../../../../../../assets/img/discket.png"></button>
+            </div>
+            
+        </div>
+
+    </div>
+
+</p-card>
