--- a/src/app/presentation/admin/expo/manage-expo/courier-guide/components/packet-data/packet-data.component.html
+++ b/src/app/presentation/admin/expo/manage-expo/courier-guide/components/packet-data/packet-data.component.html
@@ -1,1 +1,137 @@
-<p>packet-data works!</p>
+<p-card>
+                
+    <div>
+        <h3 class="text-center my-0 font-normal">
+            <span class="text-base text-red-500 text-400">DATOS PAQUETE</span>
+        </h3>
+    </div>
+
+    <!-- Inputs Datos paquete -->
+    <div class="p-fluid grid col-12 md:col-12 card-content md:mx-6">
+
+        <!--Embalaje-->
+        <div class="col-12 md:col-5 flex">
+            <span class="col-4 text-700">T.Embalaje
+            </span>
+            <input class="col" type="text" pInputText placeholder="Código + Descripción">
+        </div>
+
+        <!--Caja-->
+        <div class="col-12 md:col-5 flex">
+            <span class="col-4 text-700">T.Caja
+            </span>
+            <input class="col" type="text" pInputText placeholder="Código + Descripción">
+        </div>
+
+        <!--Paquete-->
+        <div class="col-12 md:col-5 flex">
+            <span class="col-4 text-700">T.Paquete
+            </span>
+            <input class="col" type="text" pInputText placeholder="Código + Descripción">
+        </div>
+
+        <!--# Paquetes-->
+        <div class="col-12 md:col-5 flex">
+            <span class="col-4 text-700"># Paquetes</span>
+            <input class="col" type="text" pInputText placeholder="Número + Peso [kg]">
+        </div>
+
+        <span class="grid col-12 md:col-6 pr-0  pb-0 mb-0">
+
+                <!--Largo-->
+            <div class="col-12 md:col-5 flex">
+                <span class="col-5 text-700">Largo
+                </span>
+                <input class="col" type="text" pInputText placeholder="M.[cm]" pTooltip="Medida">
+            </div>
+
+            <!--Ancho-->
+            <div class="col-12 md:col-5 flex">
+                <span class="col-5 text-700">Ancho
+                </span>
+                <input class="col" type="text" pInputText placeholder="M.[cm]" pTooltip="Medida">
+            </div>
+
+            <!--Alto-->
+            <div class="col-12 md:col-5 flex">
+                <span class="col-5 text-700">Alto
+                </span>
+                <input class="col" type="text" pInputText placeholder="M.[cm]" pTooltip="Medida">
+            </div>
+
+            <!--Peso-->
+            <div class="col-12 md:col-5 flex">
+                <span class="col-5 text-700">Peso Vol.</span>
+                <input class="col" type="text" pInputText placeholder="P.[kg]" pTooltip="Peso">
+            </div>
+
+        </span>
+
+        <div class="field col-12 md:col-6 pt-3 flex ml-0 relative position-icon">
+            <img class="h-6rem px-2 col-12 md:col-3" src="../../../../../../../assets/img/caja2.png">
+            <span class="grid field h-6rem col-12 md:col-3">
+                <span>Xxx[Cm]</span>
+                <span>Yyy[Cm]</span>
+                <span>Zzz[Cm]</span>
+                <span>Guia# abcd</span>
+            </span>
+            <img class="h-6rem px-2 col-12 md:col-3" src="../../../../../../../assets/img/caja1.png">
+            <img class="h-6rem px-2 col-12 md:col-3" src="../../../../../../../assets/img/caja1.png">
+        </div>
+
+        <!--Descripción-->
+        <div class="col-12 md:col-5 flex pt-0">
+            <span class="col-4 text-700">Descripción
+            </span>
+            <input class="col" type="text" pInputText placeholder="Descripción">
+        </div>
+
+        <!--C.MERC-->
+        <div class="col-12 md:col-5 flex">
+            <span class="col-4 text-700">C.MERC.
+            </span>
+            <input class="col" type="text" pInputText placeholder="Código + Descripción">
+        </div>
+
+        <!--País de Fab-->
+        <div class="col-12 md:col-5 flex">
+            <span class="col-4 text-700">País de Fab
+            </span>
+            <input class="col" type="text" pInputText placeholder="Código + País">
+        </div>
+
+        <!--T.Servicio-->
+        <div class="col-12 md:col-5 flex">
+            <span class="col-4 text-700">T.Servicio</span>
+            <input class="col" type="text" pInputText placeholder="Código + Descripción">
+        </div>
+
+        <!--I/E-->
+        <div class="col-12 md:col-5 flex">
+            <span class="col-4 text-700">I/E
+            </span>
+            <input class="col" type="text" pInputText placeholder="Código + Descripción">
+        </div>
+
+        <!--T.Carga-->
+        <div class="col-12 md:col-5 flex">
+            <span class="col-4 text-700">T.Carga
+            </span>
+            <input class="col" type="text" pInputText placeholder="Código + Descripción">
+        </div>
+
+        <!--V.Transp.-->
+        <div class="col-12 md:col-5 flex">
+            <span class="col-4 text-700">V.Transp.
+            </span>
+            <input class="col" type="text" pInputText placeholder="[$] Monto">
+        </div>
+
+        <!--V.Aduana-->
+        <div class="col-12 md:col-5 flex">
+            <span class="col-4 text-700">V.Aduana</span>
+            <input class="col" type="text" pInputText placeholder="[$] Monto">
+        </div>
+
+    </div>
+</p-card>
