--- a/src/app/presentation/auth/login/login.component.html
+++ b/src/app/presentation/auth/login/login.component.html
@@ -1,29 +1,36 @@
 <div class="login">
-    <p-card class="w-30rem">
-        <h3 class="text-center text-xl">Iniciar Sesión</h3>
+    <div class="container w-4 h-full flex justify-content-center flex-wrap card-container align-content-center surface-50">
+        <p-card class="w-9">
+            <h3 class="text-center text-4xl font-semibold line-height-3 pt-4 m-0">Bienvenido</h3>
 
-        <div class="p-fluid grid px-3">
+            <h4 class="text-center text-xl text-500 font-light m-0 pb-5">Nuevo sistema - Courier</h4>
 
-            <!-- Correo -->
-            <div class="field col-12">
-                <span class="p-float-label">
-                    <input type="text" id="inputtext" pInputText>
-                    <label for="inputtext">Correo</label>
-                </span>
+            <div class="p-fluid grid px-3">
+
+                <!-- Correo -->
+                <div class="field col-12">
+                    <span class="p-float-label">
+                        <input type="text" id="inputtext" pInputText>
+                        <label for="inputtext">Correo</label>
+                    </span>
+                </div>
+
+                <!-- Contraseña -->
+                <div class="field col-12">
+                    <span class="p-float-label">
+                        <p-password [feedback]="false" [toggleMask]="true"></p-password>
+                        <label for="inputtext-left">Contraseña</label>
+                    </span>
+                </div>
+
+                <div class="col-12">
+                    <button pButton class="b-primary" label="Iniciar Sesión" (click)="logIn()"></button>
+                </div>
+
             </div>
 
-            <!-- Contraseña -->
-            <div class="field col-12">
-                <span class="p-float-label">
-                    <p-password [feedback]="false" [toggleMask]="true"></p-password>
-                    <label for="inputtext-left">Contraseña</label>
-                </span>
-            </div>
+            <h4 class="text-center text-xl text-500 font-light m-0 pb-5 pt-2">¿Olvidaste tu contraseña?</h4>
 
-            <div class="col-12">
-                <button pButton class="b-primary" label="Ingresar" (click)="logIn()"></button>
-            </div>
-
-        </div>
-    </p-card>
+        </p-card>
+    </div>
 </div>
