--- a/src/app/presentation/auth/login/login.component.scss
+++ b/src/app/presentation/auth/login/login.component.scss
@@ -1,11 +1,10 @@
 .login {
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../../../assets/img/login.jpg);
+    background-image: url(../../../../assets/img/login.png);
     background-size: cover;
     flex-direction: column;
     box-sizing: border-box;
     display: flex;
-    place-content: center;
-    align-items: center;
+    align-items: end;
 }
