--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
     --secondary-color: #000000;
     --third-color: #e2e2e2;
     --text-name-color: #959595;
+    --surface-50: #ffffff6c;
 }
 
 @font-face {
@@ -23,6 +24,7 @@ html {
 
 body {
     zoom: 75%;
+    padding: 0;
     margin: 0;
     width: 100%;
     height: 100%;
@@ -483,3 +485,31 @@ p-dropdown.ng-valid.ng-clean .p-dropdown:not(.p-disabled).p-focus {
 .p-breadcrumb {
     background: transparent !important;
 }
+
+// Redimension de inputs, calendarios y botones
+
+button, p-dropdown, .p-dropdown, .p-calendar {
+    height: 38px !important;
+}
+
+.height-standar-input {
+    height: 38px !important;
+}
+
+.height-standar-list {
+    height: 25px !important;
+
+}
+
+.size-4 {
+    width: 550px !important;
+}
+
+.size-3 {
+    width: 250px !important;
+}
+
+.size-2 {
+    width: 197px !important;;
+}
+
