--- a/src/app/presentation/admin/expo/manage-expo/courier-guide/components/recipient-data/recipient-data.component.html
+++ b/src/app/presentation/admin/expo/manage-expo/courier-guide/components/recipient-data/recipient-data.component.html
@@ -9,14 +9,14 @@
             <div class="col-12 md:col-12 flex p-1">
                 <span class="col-2 text-700">Código</span>
                 <input class="col mr-4 md:mr-8" type="text" pInputText placeholder="Codigo + Descripcion">
-                <button class="col-3 b-primary text-white cursor-pointer" type="text">Crear nuevo destinatario</button>
+                <button class="col-3 b-primary text-white cursor-pointer" type="text">CREAR NUEVO</button>
             </div>
 
             <!--SUCURSAL-->
             <div class="col-12 md:col-12 flex p-1">
                 <span class="col-2 text-700">Sucursal</span>
                 <input class="col mr-4 md:mr-8" type="text" pInputText placeholder="Codigo + Descripcion">
-                <button class="col-3 b-transparent-pink text-white cursor-pointer" type="text">Actualizar datos destinatario</button>
+                <button class="col-3 b-transparent-pink text-white cursor-pointer" type="text">ACTUALIZAR</button>
             </div>
 
             <!--CONTACTO-->
